# realmate-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/conversations/: choices.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/conversations/migrations/: 0001_initial.py  0002_message_created_at.py  0003_alter_message_id.py
apps/frontend/: urls.py  views.py
apps/frontend/static/css/: styles.css
apps/frontend/static/js/: script.js
apps/frontend/templates/frontend/: 404.html  conversation_detail.html  conversations.html
realmate_challenge/: asgi.py  settings.py  urls.py
staticfiles/css/: styles.css
staticfiles/js/: script.js
